--- a/flutter_vsc/ios/Runner/GoogleService-Info .plist
+++ b/flutter_vsc/ios/Runner/GoogleService-Info .plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>572373084526-ro1gk2r4rj31hqk7mpn52gdocdb8oc43.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.572373084526-ro1gk2r4rj31hqk7mpn52gdocdb8oc43</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCgo6akDL37vQcJ9DixLESmQFJjTks5riM</string>
+	<string>AIzaSyDHbkxZj2-sufHLALv3VThsKOnOil6sE-4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>572373084526</string>
+	<string>94062739323</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.testVscFlutter</string>
 	<key>PROJECT_ID</key>
-	<string>tkll-hk241</string>
+	<string>test-9c8d6</string>
 	<key>STORAGE_BUCKET</key>
-	<string>tkll-hk241.firebasestorage.app</string>
+	<string>test-9c8d6.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:572373084526:ios:22886c4914a63992be797f</string>
+	<string>1:94062739323:ios:80711e1c9acd28420f07de</string>
 	<key>DATABASE_URL</key>
-	<string>https://tkll-hk241-default-rtdb.asia-southeast1.firebasedatabase.app</string>
+	<string>https://test-9c8d6-default-rtdb.asia-southeast1.firebasedatabase.app</string>
 </dict>
 </plist>
