--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_database: ^11.1.4
   google_sign_in: ^6.2.2
   rflutter_alert: ^2.0.7
+  buttons_tabbar: ^1.3.14
+
+
 
 dev_dependencies:
   flutter_test:
@@ -62,11 +65,12 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - images/smart.jpg
+  - images/logo.jpg
+    # - images/a_dot_burr.jpeg
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
