--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   google_sign_in: ^6.2.2
   rflutter_alert: ^2.0.7
   buttons_tabbar: ^1.3.14
-
+  provider: ^6.1.2
 
 
 dev_dependencies:
