--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   rflutter_alert: ^2.0.7
   buttons_tabbar: ^1.3.14
   provider: ^6.1.2
-
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
