--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -43,8 +43,8 @@ dependencies:
   buttons_tabbar: ^1.3.14
   provider: ^6.1.2
   intl: ^0.20.1
-  flutter_local_notifications: ^18.0.1
-  android_alarm_manager_plus: ^4.0.4
+  workmanager: ^0.5.2
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
