--- a/flutter_vsc/android/app/build.gradle
+++ b/flutter_vsc/android/app/build.gradle
@@ -12,16 +12,17 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-//        sourceCompatibility = JavaVersion.VERSION_1_8
-//        targetCompatibility = JavaVersion.VERSION_1_8
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+        incremental false
     }
 
     kotlinOptions {
-//        jvmTarget = JavaVersion.VERSION_1_8
-        jvmTarget = "11"
+       jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
+    compileSdkVersion 34
+buildToolsVersion "33.0.0"
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -29,11 +30,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
          minSdkVersion 23
-        // targetSdkVersion 33
-        // versionCode 1
-        // versionName "1.0"
-//       minSdk = flutter.minSdkVersion
-       targetSdk = flutter.targetSdkVersion
+        targetSdkVersion 34
        versionCode = flutter.versionCode
        versionName = flutter.versionName
     }
@@ -53,4 +50,8 @@ flutter {
 
 dependencies{
     implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation ('com.google.firebase:firebase-analytics:19.0.0')
+        implementation 'androidx.credentials:credentials:1.2.0-rc01'
+    implementation 'androidx.credentials:credentials-play-services-auth:1.2.0-rc01'
+    implementation 'androidx.window:window:1.2.0'
 }
