--- a/flutter_vsc/android/build.gradle
+++ b/flutter_vsc/android/build.gradle
@@ -1,10 +1,13 @@
 buildscript{
     repositories{
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies{
         classpath 'com.google.gms:google-services:4.4.2'
+        classpath 'com.android.tools.build:gradle:8.2.0'
+        // classpath 'com.google.gms:google-services:4.3.15'
+
     }
 }
 allprojects {
