--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -38,13 +38,13 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   firebase_database: ^11.1.4
-  google_sign_in: ^6.2.2
+  # google_sign_in: ^6.2.2
   rflutter_alert: ^2.0.7
   buttons_tabbar: ^1.3.14
   provider: ^6.1.2
   intl: ^0.20.1
   workmanager: ^0.5.2
-  shared_preferences: ^2.3.3
+  # shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
