--- a/flutter_vsc/pubspec.yaml
+++ b/flutter_vsc/pubspec.yaml
@@ -75,6 +75,9 @@ flutter:
   assets:
   - images/smart.jpg
   - images/logo.jpg
+  - images/res1.jpg
+  - images/res2.jpg
+
     # - images/a_dot_burr.jpeg
     # - images/a_dot_ham.jpeg
 
