--- a/flutter_vsc/android/app/src/main/AndroidManifest.xml
+++ b/flutter_vsc/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="test_vsc_flutter"
+        android:label="SmartRoom"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/logoapp">
         <activity
             android:name=".MainActivity"
             android:exported="true"
